[gd_scene load_steps=12 format=3 uid="uid://p00er4t0cflq"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_i7w8v"]
[ext_resource type="PackedScene" uid="uid://chnmkc2eistdk" path="res://Scenes/Statics/pipes.tscn" id="1_m2jk4"]
[ext_resource type="PackedScene" uid="uid://iw55whjj5m2o" path="res://Scenes/Players/player1.tscn" id="2_v3bcq"]
[ext_resource type="Texture2D" uid="uid://dcl4i20xxqpl6" path="res://Assets/flappy-bird-assets-master/sprites/background-day.png" id="2_w54r4"]
[ext_resource type="Texture2D" uid="uid://ncv30dcjac17" path="res://Assets/flappy-bird-assets-master/sprites/base.png" id="4_ya1yd"]
[ext_resource type="PackedScene" uid="uid://dmldrewmf2r1w" path="res://Scenes/UI/EndScreen.tscn" id="6_s4o3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsnqv"]
size = Vector2(491.5, 35)

[sub_resource type="Animation" id="Animation_bi4ns"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Respawner/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-19.5, 355.5)]
}

[sub_resource type="Animation" id="Animation_w8wto"]
resource_name = "move"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Respawner/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-19.5, 355.5), Vector2(-19.5, 329.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ettpt"]
_data = {
"RESET": SubResource("Animation_bi4ns"),
"move": SubResource("Animation_w8wto")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3fnq"]
size = Vector2(4, 731)

[node name="Game" type="Node2D"]
script = ExtResource("1_i7w8v")

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(247.5, 361)
scale = Vector2(1.73958, 1.41406)
texture = ExtResource("2_w54r4")

[node name="Pipes" type="Node2D" parent="."]

[node name="Pipes" parent="Pipes" instance=ExtResource("1_m2jk4")]
position = Vector2(164, 0)

[node name="Pipes2" parent="Pipes" instance=ExtResource("1_m2jk4")]
position = Vector2(313, 0)

[node name="Pipes3" parent="Pipes" instance=ExtResource("1_m2jk4")]
position = Vector2(463, 0)

[node name="Ground" type="StaticBody2D" parent="." groups=["Pipes"]]

[node name="Ground" type="Sprite2D" parent="Ground"]
position = Vector2(251.5, 666)
scale = Vector2(1.46131, 1)
texture = ExtResource("4_ya1yd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(249.25, 627)
shape = SubResource("RectangleShape2D_xsnqv")

[node name="player" parent="." instance=ExtResource("2_v3bcq")]
position = Vector2(69, 315)

[node name="Respawner" type="Area2D" parent="."]
position = Vector2(1, 76)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Respawner"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ettpt")
}
autoplay = "move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Respawner"]
position = Vector2(-19.5, 355.5)
shape = SubResource("RectangleShape2D_s3fnq")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(35, 0)
limit_left = 0
limit_top = 0
limit_right = 397

[node name="EndScreen" parent="." instance=ExtResource("6_s4o3j")]
visible = false

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 240.5
offset_right = 263.5
offset_bottom = 55.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "0"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="player_death" from="player" to="." method="_on_player_player_death"]
[connection signal="body_entered" from="Respawner" to="." method="_on_respawner_body_entered"]
